[Savepoint] fix menu collapse

--- a/webapp/src/client/styles/Navbar.module.scss
+++ b/webapp/src/client/styles/Navbar.module.scss
@@ -28,6 +28,10 @@
     height: 30px;
 }
 
+.menuContainer {
+    width: 300px;
+}
+
 .menu {
     border-bottom: none;
 }
